# tabularpriors

./: .gitignore  LICENSE  README.md  pyproject.toml  visualization_demo.ipynb
tabularpriors/: __init__.py  __main__.py  config.py  dataloader.py  main.py  utils.py
