[project]
name = "tabularpriors"
version = "0.0.1"
authors = [
  { name = "Alexander Pfefferle", email = "pfeffera@cs.uni-freiburg.de" },
  { name = "Zeynep Turkmen", email = "zeyneppturkmen@gmail.com" },
  { name = "Kursat Kaya", email = "kursatkaya2000@hotmail.com" },
  { name = "Salih Bora Ozturk", email = "borawhocodess@gmail.com" }
]
description = "A python module implementing interfaces for various public tabular priors"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "h5py>=3.14.0",
    "numpy>=2.0.2",
    "torch>=2.8.0",
    "tabicl @ git+https://github.com/soda-inria/tabicl@e88d1600701240fd353803bf1b73b5309b18d406",
    "ticl @ git+https://github.com/microsoft/ticl.git@main",
    "numba>=0.61.2",
    "interpret>=0.4.4",
    "mlflow>=3.1.4",
    "gpytorch>=1.13",
]

[project.scripts]
tabularpriors = "tabularpriors.main:main"
